# ycpa

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_basic.py
.github/workflows/: wheels.yml
scripts/: install_eigen.sh
ycpa/: __init__.py  _engine.py
ycpa/_native/: ycpa_core.cpp
