[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ycpa"
version = "0.1.0"
description = "Self-referential symbolic regression for physical-law discovery (YCPA-P)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Yusuf Said Osmanoglu" }]
keywords = ["symbolic-regression", "physics", "machine-learning", "mdl", "scientific-discovery"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib"]

[project.urls]
Homepage = "https://github.com/USERNAME/ycpa"
Repository = "https://github.com/USERNAME/ycpa"

[tool.setuptools]
packages = ["ycpa"]

# The C++ extension (ycpa_core) is built via BuildExt in setup.py.
# The pure-Python fallback always works; C++ is only for speed.

# ─────────────────────────────────────────────────────────────────────────────
# cibuildwheel — multi-platform wheel builds (Linux / macOS / Windows)
# Runs automatically on GitHub Actions. Eigen is header-only; downloaded
# per-platform via before-all and passed to setup.py through EIGEN_INCLUDE_DIR.
# ─────────────────────────────────────────────────────────────────────────────
[tool.cibuildwheel]
# Build for Python 3.8–3.13; skip PyPy and 32-bit (Eigen/AVX complications)
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_i686 *_i686 *-win32 pp*"
# Run a smoke test after each wheel: verify the wheel imports and core works,
# without source-building heavy deps. The test-command reinstalls deps as
# binary-only (--only-binary) with version caps so pip never falls back to
# compiling scipy/pandas from source inside the old manylinux2014 image
# (which lacks OpenBLAS/Fortran). Inlined here because the standalone
# test-pip-args option is not supported in older cibuildwheel versions.
test-requires = "pytest"
test-command = "pip install --only-binary=:all: 'numpy<2.1' 'scipy<1.14' 'pandas<2.3' pytest && pytest {project}/tests -q"
build-verbosity = 1

[tool.cibuildwheel.linux]
# manylinux2014 (glibc 2.17, CentOS 7 base) → very broad compatibility:
# covers all 2014+ Linux distros. cibuildwheel runs auditwheel repair
# AUTOMATICALLY inside the Docker image for Linux wheels; libgomp is bundled
# and the tag is upgraded to manylinux (verified locally).
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
# Download Eigen inside the manylinux2014 Docker image (yum-based; curl available)
before-all = "bash {project}/scripts/install_eigen.sh"
environment = { EIGEN_INCLUDE_DIR = "/tmp/eigen/include/eigen3" }

[tool.cibuildwheel.macos]
# macOS: clang supports OpenMP via libomp (Homebrew) — install it, then Eigen.
before-all = "bash {project}/scripts/install_eigen.sh"
environment = { EIGEN_INCLUDE_DIR = "/tmp/eigen/include/eigen3", MACOSX_DEPLOYMENT_TARGET = "10.14" }

[tool.cibuildwheel.windows]
before-all = "bash {project}/scripts/install_eigen.sh"
# PYTHONUTF8=1 forces UTF-8 so delvewheel can read source files containing
# math symbols (·, ², √, etc.) without a cp1252 UnicodeDecodeError.
environment = { EIGEN_INCLUDE_DIR = "C:/eigen/include/eigen3", PYTHONUTF8 = "1" }
# On Windows the OpenMP DLL (vcomp140.dll ships with MSVC; no bundling needed) —
# still use delvewheel to bundle the extension DLL dependencies into the wheel.
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
